--- a/aufgabe1.yaml
+++ b/aufgabe1.yaml
@@ -53,15 +53,13 @@ spec:
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
-          - weight: 100
-            podAffinityTerm:
-              labelSelector:
-                matchExpressions:
-                - key: app
-                  operator: In
-                  values:
-                  - nginx-webserver
-              topologyKey: "kubernetes.io/hostname" 
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - nginx-webserver
+            topologyKey: "kubernetes.io/hostname"
       containers:
       - name: nginx
         image: nginx:stable
